NotificationsOptionWidget: Fix icon alignment

--- a/modules/styles/mw.echo.ui.PageNotificationsOptionWidget.less
+++ b/modules/styles/mw.echo.ui.PageNotificationsOptionWidget.less
@@ -44,9 +44,7 @@
 		width: 1em;
 
 		.oo-ui-iconElement-icon {
-			display: inline-block;
 			position: relative;
-			margin-top: 0.1em;
 		}
 	}
 
